--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@ body{
 
 /* CHAT AREA SCROLLBAR */
 
-/* @layer utilities {
+@layer utilities {
   .main-chat-area::-webkit-scrollbar {
     @apply w-[5px];
   }
@@ -25,7 +25,23 @@ body{
   .main-chat-area::-webkit-scrollbar-thumb:hover {
     @apply bg-[#e74c3c];
   }
-} */
+
+  .userlist-area::-webkit-scrollbar {
+    @apply w-[5px];
+  }
+
+  .userlist-area::-webkit-scrollbar-track {
+    @apply shadow-inner shadow-gray-500 rounded-[10px];
+  }
+
+  .userlist-area::-webkit-scrollbar-thumb {
+    @apply bg-[#e74c3c] rounded-[10px];
+  }
+
+  .userlist-area::-webkit-scrollbar-thumb:hover {
+    @apply bg-[#e74c3c];
+  }
+}
 
 /* MEDIA QUERY FOR USER LIST */
 
